@@ -1,3 +1,10 @@
+2008-04-09  Nicolas Bruguier  <gandalfn@club-internet.fr>
+
+    * src/ccm-screen.c:
+    * src/ccm-window.c:
+    * src/ccm.h: Send state and property changed only if modified, fix restack
+                 below if is hidden.
+
 2008-04-08  Nicolas Bruguier  <gandalfn@club-internet.fr>
 
     * src/ccm-screen.c:
